k8s/django.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: django
  labels:
    app: demo-chat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-chat
  template:
    metadata:
      labels:
        app: demo-chat
    spec:
      containers:
        - name: django
          image: eu.gcr.io/meetup-demo-219112/django:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy", "-instances=<CONN_NAME>=tcp:5432", "-credential_file=/secrets/cloudsql/credentials.json"]
          securityContext:
            runAsUser: 2
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true

      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
