k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-chat
spec:
  type: LoadBalancer
  selector:
    app: demo-chat
  ports:
    port: 80
    targetPort: 5000
