k8s/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - secretName: meetup-profiq-com-tls
      hosts:
        - api.meetup.profiq.com
  backend:
    serviceName: demo-chat
    servicePort: 80
